# SimplexTools

./: .gitignore  README.md  setup.cfg
simplextools/: metrics.py  roc_multiclass.py  simplex_plots.py  thresh_tuning.py
