[metadata]
name = simplextools
version = 0.1.0
author = Edoardo Legnaro, Francesco Marchetti, Sabrina Guastavino
author_email = edoardo.legnaro@edu.unige.it
description = Tools for performing threshold tuning for classification tasks on the simplex.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/edoardolegnaro/SimplexTools
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    torch
    p_tqdm
    matplotlib
    scikit-learn

[options.packages.find]
where = .
exclude =
    tests*

[options.entry_points]
console_scripts =
    simplextools-cli = simplextools.cli:main
